# clutter-sharp

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.assembly  Makefile.gapi  Makefile.include  README  autogen.sh  clutter-sharp.snk  configure.ac
clutter/: ButtonEvent.cs  ChangeLog  ClutterRun.cs  Color.custom  CrossingEvent.cs  Event.cs  KeyEvent.cs  Makefile.am  README  ScrollEvent.cs  Smoothstep.custom  clutter-api.raw  clutter-sharp.dll.config.in  clutter-sharp.pc.in  clutter-sources.xml  clutter.metadata  configure.ac
clutter-cairo/: AUTHORS  AssemblyInfo.cs.in  ChangeLog  Makefile.am  clutter-cairo-api.raw  clutter-cairo-sharp.pc.in  clutter-cairo-sources.xml  configure.ac
clutter-cairo/examples/: Flowers.cs  Makefile.am  clutter-cairo-sharp.dll.config
clutter-cairo/gapi/: Makefile.am  clutter-cairo-sources.xml  clutter-cairo.metadata
clutter-cairo/src/: AssemblyInfo.cs.in  CairoTexture.cs  Makefile.am  ObjectManager.cs  clutter-cairo-sharp.dll.config.in  clutter-cairo-sharp.snk  clutter-sharp.dll.config.in
clutter-gst/: ChangeLog  Makefile.am  clutter-gst-api.raw  clutter-gst-sharp.dll.config.in  clutter-gst-sharp.pc.in  clutter-gst-sources.xml  clutter-gst.metadata  configure.ac
clutter-gst/examples/: Makefile.am  PlayVideo.cs
clutter-gst/gapi/: Makefile.am  clutter-gst-sources.xml  clutter-gst.metadata
clutter-gst/src/: AssemblyInfo.cs.in  GstAudio.cs  GstAudio.custom  GstGlobal.cs  GstVideoSink.cs  GstVideoTexture.cs  Makefile.am  clutter-gst-sharp.snk
clutter-gtk/: AssemblyInfo.cs.in  ChangeLog  Makefile.am  README  clutter-gtk-api.raw  clutter-gtk-sharp.dll.config.in  clutter-gtk-sharp.pc.in  clutter-gtk-sources.xml  clutter-gtk.metadata  configure.ac
clutter-gtk/examples/: Makefile.am  Test.cs  TestEvents.cs
clutter-gtk/gapi/: Makefile.am  clutter-gtk-sources.xml  clutter-gtk.metadata
clutter-gtk/src/: AssemblyInfo.cs.in  Embed.cs  GtkClutter.cs  Makefile.am  ObjectManager.cs  clutter-gtk-sharp.snk
clutter/Clutter/: ActorBox.custom  Application.cs  BehaviourPath.custom  ButtonEvent.cs  Color.custom  Event.cs  Exp.custom  Group.custom  Idle.cs  KeyEvent.cs  Knot.custom  Makefile.am  MotionEvent.cs  Ramp.custom  Rectangle.custom  Script.custom  ScrollEvent.cs  Sine.custom  Smoothstep.custom  Source.cs  Stage.custom  StageStateEvent.cs  Timeline.custom  Timeout.cs  clutter-api.raw  clutter-sources.xml  clutter-symbols.xml  clutter.metadata
clutter/Cogl/: Angle.custom  BufferBit.cs  Fixed.custom  GL.cs  General.cs  Makefile.am  MaterialLayerFlags.cs  Matrix.cs  Path.custom  cogl-api.raw  cogl-sources.xml  cogl-symbols.xml  cogl.metadata  parse-gl-h.awk
clutter/examples/: Makefile.am  behave.cs  behave.exe.mdb  clutter-sharp.dll.config  clutter-sharp.dll.mdb  super-oh.cs  super-oh.exe.mdb  test-actors.cs  test-behave.cs  test-entry.cs  test-scale.cs  test-script.cs  test-scroll-actor.cs  test-shaders.cs  test-threads.cs  test.cs  test.exe.mdb
clutter/gapi/: Makefile.am  clutter-sources.xml  clutter-sources.xml.in  clutter.metadata
clutter/src/: Actor.cs  ActorAddedHandler.cs  ActorBox.cs  ActorFlags.cs  ActorRemovedHandler.cs  AddEventHandler.cs  AddedHandler.cs  Alpha.cs  AlphaFunc.cs  AnyEvent.cs  AppliedHandler.cs  Backend.cs  Behaviour.cs  BehaviourBspline.cs  BehaviourDepth.cs  BehaviourEllipse.cs  BehaviourForeachFunc.cs  BehaviourOpacity.cs  BehaviourPath.cs  BehaviourPath.custom  BehaviourRotate.cs  BehaviourScale.cs  Box.cs  BoxChild.cs  ButtonEvent.cs  ButtonPressEventHandler.cs  ButtonReleaseEventHandler.cs  Callback.cs  ChildMeta.cs  ChildNotifyHandler.cs  CloneTexture.cs  ClutterRun.cs  ClutterSharp.AlphaFuncNative.cs  ClutterSharp.BehaviourForeachFuncNative.cs  ClutterSharp.CallbackNative.cs  ClutterSharp.EffectCompleteFuncNative.cs  ClutterSharp.ModelFilterFuncNative.cs  ClutterSharp.ModelForeachFuncNative.cs  ClutterSharp.ModelSortFuncNative.cs  ClutterSharp.ScriptConnectFuncNative.cs  (+111 more)
docs/: Makefile.am  monodoc.mk
docs/clutter-gtk-sharp/: Makefile.am  clutter-gtk-sharp-docs.source
docs/clutter-gtk-sharp/en/: index.xml  ns-GtkSharp.ClutterSharp.xml
docs/clutter-gtk-sharp/en/Clutter/: Embed.xml  GtkUtil.xml  Scrollable.xml  ScrollableAdapter.xml  ScrollableImplementor.xml  Viewport.xml
docs/clutter-gtk-sharp/en/GtkSharp.ClutterSharp/: ObjectManager.xml
docs/clutter-sharp/: Makefile.am  clutter-sharp-docs.source
docs/clutter-sharp/en/: index.xml  ns-Clutter.Cogl.xml  ns-Clutter.xml  ns-Cogl.xml
docs/clutter-sharp/en/Clutter/: Actor.xml  ActorAddedArgs.xml  ActorAddedHandler.xml  ActorBox.xml  ActorFlags.xml  ActorRemovedArgs.xml  ActorRemovedHandler.xml  Alpha.xml  AlphaFunc.xml  Animatable.xml  AnimatableAdapter.xml  AnimatableImplementor.xml  Animation.xml  AnimationMode.xml  Application+Win32.xml  Application+X11.xml  Application.xml  AppliedArgs.xml  AppliedHandler.xml  Backend.xml  Behaviour.xml  BehaviourDepth.xml  BehaviourEllipse.xml  BehaviourForeachFunc.xml  BehaviourOpacity.xml  (+161 more)
docs/clutter-sharp/en/Clutter.Cogl/: Angle.xml  Bitmap.xml  BufferTarget.xml  Clip.xml  Color.xml  Create.xml  DebugFlags.xml  Enable.xml  FeatureFlags.xml  Fixed.xml  FogMode.xml  FuncPtr.xml  Global.xml  Handle.xml  Is.xml  Material.xml  MaterialAlphaFunc.xml  MaterialBlendFactor.xml  MaterialFlushOption.xml  MaterialLayerCombineChannels.xml  MaterialLayerCombineFunc.xml  MaterialLayerCombineOp.xml  MaterialLayerCombineSrc.xml  MaterialLayerType.xml  Matrix.xml  Offscreen.xml  Path.xml  PixelFormat.xml  Pop.xml  Program.xml  Push.xml  Rectangle.xml  Shader.xml  Texture.xml  TextureFlags.xml  TextureVertex.xml  Vertex.xml
examples/: Makefile.am  cogl-primitives.cs  gst-play-video.cs  gtk-test-events.cs  gtk-test.cs  test-actors.cs  test-behave.cs  test-cogl-primitives.cs  test-cogl-vertex-buffer.cs  test-entry.cs  test-script.cs  test-script.json  test-shaders.cs  test-threads.cs
gapi/: Makefile.am
gapi/generator/: EnumGen.cs  GObjectVM.cs  InterfaceGen.cs  Makefile.am  ObjectGen.cs
gapi/parser/: Makefile.am  gapi-parser.cs
glib/: GType.cs  GTypeExtensions.cs  Makefile.am  apply-patch.awk  patch.cs
(+38 files in other folders)
