SUBDIRS = \
	gapi \
	glib \
	clutter \
	clutter-gtk \
	docs

DIST_SUBDIRS = \
	build \
	gapi \
	glib \
	clutter \
	clutter-gtk \
	examples \
	docs

EXTRA_DIST = clutter-sharp.snk

MAINTAINERCLEANFILES = \
	aclocal.m4 \
	config.guess \
	config.sub \
	configure \
	install-sh \
	missing \
	INSTALL \
	Makefile.in
