GAPI_SOURCES_XML = $(srcdir)/clutter-sources.xml
GAPI_METADATA = $(srcdir)/clutter.metadata
GAPI_RAW_API = $(srcdir)/clutter-api.raw
GAPI_SYMBOLS = $(srcdir)/clutter-symbols.xml

GAPI_FIXED_API = $(builddir)/clutter-api.xml

CUSTOM_API_INCLUDES = $(top_builddir)/clutter/Cogl/cogl-api.xml

CLEANFILES =
EXTRA_DIST =

include $(top_srcdir)/build/gapi.mk

MAINTAINERCLEANFILES = Makefile.in
